[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/Screens/Specializations/TraitSlot/TraitSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/FullScreenPopup/FullScreenPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/FullScreenPopup/SpecializationInspector/SpecializationInspector.gd" type="Script" id=4]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentSmall.png" type="Texture" id=5]
[ext_resource path="res://RESOURCES/GuiImages/ParchmentLargeVertical.png" type="Texture" id=6]
[ext_resource path="res://RESOURCES/GuiImages/StoneBoard.png" type="Texture" id=7]
[ext_resource path="res://RESOURCES/Font/TEXGYRECHORUS.otf" type="DynamicFontData" id=8]
[ext_resource path="res://RESOURCES/GuiImages/DivisionLineVertical.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 8 )

[node name="SpecializationInspector" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="VBoxContainer" parent="Panel" index="0"]
margin_top = 21.0
margin_bottom = -39.0

[node name="Title" type="NinePatchRect" parent="Panel/VBoxContainer" index="0"]
margin_right = 840.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
texture = ExtResource( 5 )
patch_margin_left = 66
patch_margin_top = 62
patch_margin_right = 61
patch_margin_bottom = 42
axis_stretch_horizontal = 1
axis_stretch_vertical = 2

[node name="SpecializationName" type="Label" parent="Panel/VBoxContainer/Title" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Assassination"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/VBoxContainer" index="1"]
margin_top = 154.0
margin_right = 840.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 300 )
texture = ExtResource( 7 )
patch_margin_left = 46
patch_margin_top = 45
patch_margin_right = 45
patch_margin_bottom = 51
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/NinePatchRect" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = -20.0

[node name="Rank" type="VBoxContainer" parent="Panel/VBoxContainer/NinePatchRect/HBoxContainer" index="0"]
margin_right = 378.0
margin_bottom = 260.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/NinePatchRect/HBoxContainer/Rank" index="0"]
margin_right = 378.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Current Rank:"
align = 1
valign = 2

[node name="Rank" type="Label" parent="Panel/VBoxContainer/NinePatchRect/HBoxContainer/Rank" index="1"]
margin_top = 84.0
margin_right = 378.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Apprentice"
align = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/NinePatchRect/HBoxContainer" index="1"]
margin_left = 382.0
margin_right = 397.0
margin_bottom = 260.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="Description" type="VBoxContainer" parent="Panel/VBoxContainer/NinePatchRect/HBoxContainer" index="2"]
margin_left = 401.0
margin_right = 780.0
margin_bottom = 260.0
size_flags_horizontal = 3

[node name="Quote" type="Label" parent="Panel/VBoxContainer/NinePatchRect/HBoxContainer/Description" index="0"]
margin_right = 379.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "\"...Everything is permitted. Nothing is true...\""
align = 1
valign = 1
autowrap = true

[node name="SkillTree" type="TextureRect" parent="Panel/VBoxContainer" index="2"]
margin_top = 458.0
margin_right = 840.0
margin_bottom = 1460.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="Lines" type="Node2D" parent="Panel/VBoxContainer/SkillTree" index="0"]

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/SkillTree" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0

[node name="TraitContainer" type="GridContainer" parent="Panel/VBoxContainer/SkillTree/ScrollContainer" index="0"]
margin_right = 720.0
margin_bottom = 882.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 85
custom_constants/hseparation = 105
columns = 3

[node name="SpecializationSlot" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="0" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0

[node name="Line2D" type="Line2D" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer/SpecializationSlot" index="1"]
show_behind_parent = true
position = Vector2( 85, 150 )
points = PoolVector2Array( 0, 0, 275, 100 )
width = 5.0
default_color = Color( 0.87451, 0.254902, 0.0392157, 1 )
joint_mode = 2

[node name="SpecializationSlot2" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="1" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0

[node name="Line2D" type="Line2D" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer/SpecializationSlot2" index="1"]
show_behind_parent = true
position = Vector2( 85, 150 )
points = PoolVector2Array( 0, 0, 0, 100 )
width = 5.0
default_color = Color( 0.87451, 0.254902, 0.0392157, 1 )
joint_mode = 2

[node name="SpecializationSlot3" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="2" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0

[node name="Line2D" type="Line2D" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer/SpecializationSlot3" index="1"]
show_behind_parent = true
position = Vector2( 85, 150 )
points = PoolVector2Array( 0, 0, -275, 100 )
width = 5.0
default_color = Color( 0.87451, 0.254902, 0.0392157, 1 )
joint_mode = 2

[node name="SpecializationSlot4" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="3" instance=ExtResource( 1 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_bottom = 160.0

[node name="SpecializationSlot5" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="4" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0

[node name="Line2D" type="Line2D" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer/SpecializationSlot5" index="1"]
show_behind_parent = true
position = Vector2( 85, 150 )
points = PoolVector2Array( 0, 0, 275, 100 )
width = 5.0
default_color = Color( 0.87451, 0.254902, 0.0392157, 1 )
joint_mode = 2

[node name="Line2D2" type="Line2D" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer/SpecializationSlot5" index="2"]
show_behind_parent = true
position = Vector2( 85, 150 )
points = PoolVector2Array( 0, 0, 0, 100 )
width = 5.0
default_color = Color( 0.87451, 0.254902, 0.0392157, 1 )
joint_mode = 2

[node name="Line2D3" type="Line2D" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer/SpecializationSlot5" index="3"]
show_behind_parent = true
position = Vector2( 85, 150 )
points = PoolVector2Array( 0, 0, -275, 100 )
width = 5.0
default_color = Color( 0.87451, 0.254902, 0.0392157, 1 )
joint_mode = 2

[node name="SpecializationSlot6" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="5" instance=ExtResource( 1 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_bottom = 160.0

[node name="SpecializationSlot7" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="6" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0

[node name="SpecializationSlot8" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="7" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0

[node name="SpecializationSlot9" parent="Panel/VBoxContainer/SkillTree/ScrollContainer/TraitContainer" index="8" instance=ExtResource( 1 )]
visible = false
margin_bottom = 160.0
